  * Fixes for macOS button appearance (Takuro Hosomi)
  * Plugin fixes, renaming --plugin to --veusz-plugin option
    (also thanks to Takuro Hosomi)
  * Bug fix for broken axis drawing
  * Mirrored axis bug fix
  * More keyboard shortcuts
  * Fix build system to use sip-build, which works with recent SIP versions
  * Change high DPI scaling policy

User-visible changes in 3.4:
  * Font styles can be chosen
  * Add setting to specify minor ticks in axis
  * Add setting to ignore NaN values in point plotter, rather than breaking lines
  * Add copy and paste of images (thanks to chakuro)
  * Add embedding SVG graphics (thanks to korintje)
  * New tight-Bezier line style (thanks to korintje)
  * Add hide icon (eye) in settings and grey tabs as appropriate
  * Add \ddot latex command
  * Axis auto ranges (e.g. 5-95%) can now have decimals
  * Filename set after Load()
  * Fix renaming 2D datasets
  * Fix for blank dataset output names in dataset plugin
  * Fix for crash in QDP plugin
  * Linux dark mode improvements
  * Font foundry name removed from SVG files
  * Add page colour or fill setting
  * Change default xy plotter marker size and fill colour for new documents
  * Add function widget global colour setting

Internal changes in 3.4:
  * Add new compatibility level functionality for new documents
  * Iminuit2 fixes (thanks to korintje)
  * Drop Python 2 compatibility
  * Source code reformatting
  * Updated appdata (thanks to kevinsmia1939)
  * Import sip from PyQt5.sip if available
  * Update to require SIP 5+ build system (thanks to mitya57)
  * Python 3.10 fixes

Changes in 3.3.1:
  * New tools for zooming into plot on click, zooming out, moving plot
    center and resetting plot axes
  * Double clicking on axis range resets endpoint to Auto
  * Add key entries for histo widget
  * MacOS improvements
    * Big Sur compatibility fix
    * Fix file associations
  * Python 3.10 prerelease fixes
  * Fix for reproducible builds

Changes in 3.3: